--- a/index.html
+++ b/index.html
@@ -15,9 +15,25 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
+    <div class="container my-4">
+      <h1 class="mb-4 text-center">Buscar libros por autor</h1>
+
+      <form id="formBusqueda" class="row g-3 justify-content-center">
+        <div class="col-md-6">
+          <div class="input-group mb-4">
+            <input type="text" class="form-control" id="inputAutor" name="autor" placeholder="Escribe el nombre del autor"  />
+            <button type="submit" id="botonBuscar" class="btn btn-primary">Buscar</button>
+          </div>
+        </div>
+      </form>
+
+      <div id="contadorResultados" class="mt-3 text-center fw-semibold"></div>
+
+      <div id="contenedorResultados" class="mt-4"></div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -29,7 +45,6 @@
       integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
